	* Headers/gnustep/gui/NSRulerMarker.h: ditto
	* Headers/gnustep/gui/NSText.h: ditto
	* Headers/gnustep/gui/NSTextContainer.h: ditto
	* Source/NSLayoutManager.m: ditto
	* Source/NSPopUpButtonCell.m: ditto
	* Source/NSTextContainer.m: ditto
	* Source/NSWorkspace.m: ditto
	* Source/NSFont.m: ditto
	* Source/NSOpenPanel.m: ditto
	* Source/NSPasteboard.m: ditto
	* Source/NSView.m: ditto

2003-07-22  Andrew Ruder <aeruder@ksu.edu>

	* Source/NSWindow.m: Fix potential (unlikely) leak
	* Source/NSCursor.m: Fix memory leak;
	* Source/NSResponder.m: Fix memory leak;
	* Source/NSPrintPanel.m: Fix memory leak;

2003-07-21  Kazunobu Kuriyama <kazunobu.kuriyama@nifty.com>

	* Documentation/Gui/LanguageSetup.gsdoc: Update.

2003-07-21  Andrew Ruder <aeruder@ksu.edu>

	* Source/NSBundleAdditions.m: Fix memory leaks.

2003-07-21  Andrew Ruder <aeruder@ksu.edu>

	* Source/GSMemoryPanel.m: Add dealloc method
	* Source/NSOutlineView.m: Efficiency tweak.
	* Headers/AppKit/NSComboBoxCell.h:Fix misplaced semicolon 
	* Source/NSSelection.m: Fix memory leak
	* Source/NSComboBoxCell.m: Fix misplaced semicolon.
	* Source/NSPageLayout.m: Fix memory leak.
	* Source/NSMenuView.m: Fix memory leak.
	* Source/NSToolbar.m: Fix memory leak and tidy
	* Source/GSServicesManager.m: Clarify retain/release of timer.

2003-07-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileWrapper.m: Tidy initialisation and fix leak in
	dealloc.
	* Source/NSTextAttachment.m: ditto.
	* Source/NSGraphicsContext.m: Memory leak fixes (suggested by Andrew
	Ruder) and initialisation tidyups.
	* Source/NSInputManager.m: ditto
	* Source/NSOpenPanel.m: ditto
	* Source/NSDocument.m: minor tidyup in init and add some documentation
	* Source/NSDocumentController.m: add some documentation

2003-07-19  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile: Build Documentation if doc=yes (yes by default).

	* Tools/gsnd/GNUmakefile.postamble: Linke in pthreads if not
	already linked in (non-mingw targets only).