@@ -14,6 +14,8 @@
 	* Source/NSOpenPanel.m: ditto
 	* Source/NSPasteboard.m: ditto
 	* Source/NSView.m: ditto
+	* Source/NSBezierPath.m: ditto
+	* Headers/gnustep/gui/NSBezierPath.h: ditto
 
 2003-07-22  Andrew Ruder <aeruder@ksu.edu>
 
